# chatbot-with-rag

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.lambda  README.md  alembic.ini  architecture.md  backend_entrypoint.py  diff  docker-compose.dev.yml  docker-compose.lambda.yml  docker-compose.yml  frontend_entrypoint.py  pyproject.toml
alembic/: env.py
alembic/versions/: 9ff57d084d8a_change_embedding_dimension_from_1024_to_.py
apps/backend/: README.md  alembic.ini  backend_entrypoint.py  deploy.sh  pyproject.toml
apps/backend/alembic/versions/: 34c68b28c841_add_user_id_status_and_error_message_to_.py  979750027763_add_storage_type_to_documents.py  c7b3cd923558_initial_schema_with_users_documents_.py  d5e8f2a9b1c3_add_prompt_profiles.py
apps/backend/src/: main.py
apps/backend/src/api/routes/: __init__.py  auth.py  chat.py  embed.py  profiles.py  upload.py
apps/backend/src/api/schemas/: __init__.py  profile.py
apps/backend/src/core/: __init__.py  bedrock_client.py  config.py
apps/backend/src/core/security/: __init__.py  password.py
apps/backend/src/db/: session.py
apps/backend/src/models/: __init__.py  conversation.py  document.py  prompt_profile.py  user.py
apps/backend/src/services/: chat_service.py  document_service.py  profile_service.py  retrieval_service.py  s3_service.py  user_service.py
apps/frontend/: .env.example  .env.production  deploy.sh  package-lock.json  package.json  vite.config.ts
docs/: DOCKER_MIGRATION.md  architecture.md  architecture_improvement_plan.md  aurora_deployment_guide.md  authentication_guide.md  aws_deployment_guide.md  aws_deployment_troubleshooting.md  current_aws_architecture.md  database_erd.md  database_schema.md  docker_build_commands.md  frontend-deployment.md  implementation_status.md  local_development.md  quickstart.md  s3_async_deployment_completed.md  s3_async_processing_implementation.md  setup_database.md  terraform_setup_guide.md
infrastructure/docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.lambda  nginx.conf
infrastructure/terraform/: README.md  api_gateway.tf  apprunner.tf  backend.tfvars.example  cloudfront.tf  database.tf  lambda.tf  locals.tf  main.tf  outputs.tf  route53.tf  s3.tf  secret.tf  terraform.tfvars.example  tfplan  variables.tf  vpc.tf
lambda_handlers/: __init__.py  backend_handler.py  frontend_handler.py
scripts/: deploy_to_ecr.sh  generate_secret_key.py  init_db.sh  setup_iam.sh  start_backend.sh  start_backend_with_aws.sh  start_frontend.sh  start_frontend_dev.sh  test_api.py  test_basic_processing.py  test_rag.py
scripts/deploy/: config.sh  deploy-backend.sh  deploy-frontend.sh
scripts/docker/: start-backend.sh
scripts/local/: init-db.sh  start-backend.sh  start-frontend.sh
src/: __init__.py  app.py  main.py
src/api/: __init__.py  deps.py
src/core/: bedrock_client.py  config.py  secrets.py
src/db/: __init__.py  base.py  init_db.py  session.py
src/frontend/: __init__.py
src/models/: document.py
src/prompts/: system_prompts.py
src/services/: __init__.py  auth_service.py  chat_service.py  document_service.py  retrieval_service.py  s3_service.py  user_service.py
terraform/: api_gateway.tf  apprunner.tf  database.tf  lambda.tf  main.tf  outputs.tf  route53.tf  s3.tf  secret.tf
(+56 files in other folders)
